--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="libertinus">
     <div id="root"></div>
     <script src="./script.jsx" type="module"></script>
   </body>
